--- a/R/DESCRIPTION
+++ b/R/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: sentimentIt
 Type: Package
-Title: What the Package Does (Title Case)
+Title: To use for sending out sentiment documents to review.
 Version: 0.1
 Date: 2016-04-04
-Author: Who wrote it
+Author: David Carlson
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
+RoxygenNote: 5.0.1
