--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,9 @@ export(createPairwise)
 export(makeComps_sep)
 export(readInData)
 export(readText)
+import(rstan)
+export(check_workers)
+export(fit_stan)
+export(fit_stan_hier)
+export(readInData)
+export(stanWrapper)
