--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(batch_status)
 export(checkWorkers)
 export(createBatches)
 export(createHITS)
+export(createHITStimed)
 export(createPairwise)
 export(fitStan)
 export(fitStanHier)
@@ -12,4 +13,8 @@ export(readInData)
 export(readText)
 export(repostExpired)
 export(stanWrapper)
-export(wrappertimed)
+import(RCurl)
+import(httr)
+import(jsonlite)
+import(plyr)
+import(rstan)
