--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(readInData)
 export(readText)
 export(repostExpired)
 export(stanWrapper)
+export(extractCoef)
 import(RCurl)
 import(httr)
 import(jsonlite)
