--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(readText)
 export(repostExpired)
 export(stanWrapper)
 export(extractCoef)
+export(batchesWrapper)
+export(timedWrapper)
 import(RCurl)
 import(httr)
 import(jsonlite)
