--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,40 +1,17 @@
 Package: sentimentIt
-Type: Package for document review.
-Title: A package for interacting with SentimentIt website through R
+Title: SentimentIt Text Analysis
 Version: 0.1
-Date: 2016-04-04
-Authors@R: c(
-    person("Jacob", "Montgomery", email = "jacob.montgomery@wustl.edu", role = "aut"),
-    person("David", "Carlson", email = "carlson.david@wustl.edu", role = c("aut", "cre")))
-Description: This package interacts with the SentimentIt website. It can download data
-    from completed batches, create new batches, and manage with Amazon Turk workers.
-License: 0.0.1
-LazyData: TRUE
-RoxygenNote: 5.0.1
-Collate:
-    'createTasks.R'
-    'batchStatus.R'
-    'createPairwise.R'
-    'readInData.R'
-    'readText.R'
-    'repostExpired.R'
-    'checkWorkers.R'
-    'fitStan.R'
-    'fitStanHier.R'
-    'stanWrapper.R'
-    'makeCompsSep.R'
-    'createTasksTimed.R'
-    'createTasksBatch.R'
-    'batchesWrapper.R'
-    'timedWrapper.R'
-    'extractCoef.R'
-    'sentimentIt.R
-Imports:
+Author: David Carlson and Jacob M. Montgomery
+Maintainer: David Carlson <carlson.david@wustl.edu>
+Description: This package interacts with the SentimentIt API for sentiment
+    analysis of text through crowdsourcing.
+Depends:
     plyr,
     jsonlite,
     httr,
     RCurl,
     rstan
 Suggests:
-    testthat,
-    devtools
+    testthat
+License: GPL (>= 2)
+RoxygenNote: 5.0.1
