--- a/sentimentIt/NAMESPACE
+++ b/sentimentIt/NAMESPACE
@@ -22,3 +22,11 @@ export(repostExpired)
 export(revokeCert)
 export(sentimentIt)
 export(signout)
+importFrom("grDevices", "dev.off", "pdf")
+importFrom("graphics", "hist", "plot", "rug")
+importFrom("utils", "read.csv", "read.table", "write.table")
+import(rstan)
+import(RCurl)
+import(httr)
+import(jsonlite)
+import(plyr)
