--- a/sentimentIt/DESCRIPTION
+++ b/sentimentIt/DESCRIPTION
@@ -13,9 +13,9 @@ Imports:
     RCurl,
     rstan
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
     testthat
 LazyData: true
 License: GPL (>= 2)
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 VignetteBuilder: knitr
