--- a/sentimentIt/NAMESPACE
+++ b/sentimentIt/NAMESPACE
@@ -15,7 +15,7 @@ export(createPairwise)
 export(createTasks)
 export(fitStan)
 export(fitStanHier)
-export(makeCompsSep)
+export(makeComps)
 export(readInData)
 export(readText)
 export(repostExpired)
